Set new service, customer account
